--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           alert('自動コピーに失敗しました。端末IDを手動でコピーして貼り付けてください：\n' + deviceId);
         }
         // 参考としてパラメータも付与（Formsで自動入力はできませんが、ログ用途に有用）
-        location.href = `${FORMS_URL}?device=${encodeURIComponent(deviceId)}`;
+        location.href = `${https://forms.office.com/Pages/ResponsePage.aspx?id=DUXPH3G7_U6uXZDHvnV-ErBciUpgzMxIuotXr1XJnMhUQ0w2MUtXSFVITzlGQjI2RUpVUFVHMkhIMy4u}?device=${encodeURIComponent(deviceId)}`;
       });
     }
 
