--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>入社式 受付ページ</title>
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 20px; }
+    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif; margin: 20px; }
     #card { border: 1px solid #ddd; padding: 16px; border-radius: 12px; max-width: 560px; }
     button { padding: 10px 16px; }
     code { background: #f6f6f6; padding: 2px 4px; border-radius: 4px; }
@@ -14,19 +14,20 @@
 <body>
   <h1>入社式 受付ページ</h1>
   <div id="card">
-    <!-- HTMLは message で統一 -->
     <p id="message">位置情報を確認しています。少々お待ちください。</p>
     <div id="ui" style="display:none"></div>
   </div>
 
   <script>
-    // ===== 設定値（会場座標・半径・Forms URL） =====
-    const TARGET_LAT = 35.390896;     // 会場の緯度（例）
-    const TARGET_LON = 139.469494;    // 会場の経度（例）
+    // ===== 設定値（会場の緯度・経度・半径・Forms URL） =====
+    const TARGET_LAT = 35.390896;     // 会場の緯度（例：駒場研修センター）
+    const TARGET_LON = 139.469494;    // 会場の経度
     const RADIUS_M   = 100;         // 許容半径（メートル）
-    const FORMS_URL  = "https://forms.office.com/Pages/ResponsePage.aspx?id=DUXPH3G7_U6uXZDHvnV-ErBciUpgzMxIuotXr1XJnMhUQ0w2MUtXSFVITzlGQjI2RUpVUFVHMkhIMy4u"; // ←実際のURLに差し替え
 
-    // ===== 共通：message 要素の参照（HTMLに合わせる） =====
+    // ✅ あなたの Microsoft Forms のURL
+    const FORMS_URL  = "https://forms.office.com/Pages/ResponsePage.aspx?id=DUXPH3G7_U6uXZDHvnV-ErBciUpgzMxIuotXr1XJnMhUQ0w2MUtXSFVITzlGQjI2RUpVUFVHMkhIMy4u";
+
+    // ===== 共通：message 要素の参照 =====
     const messageEl = document.getElementById('message');
 
     // ===== 端末IDの生成/保存（localStorage） =====
@@ -89,12 +90,12 @@
         if (!ok) {
           alert('自動コピーに失敗しました。端末IDを手動でコピーして貼り付けてください：\n' + deviceId);
         }
-        // 参考としてパラメータも付与（Formsで自動入力はできませんが、ログ用途に有用）
-        location.href = `${https://forms.office.com/Pages/ResponsePage.aspx?id=DUXPH3G7_U6uXZDHvnV-ErBciUpgzMxIuotXr1XJnMhUQ0w2MUtXSFVITzlGQjI2RUpVUFVHMkhIMy4u}?device=${encodeURIComponent(deviceId)}`;
+        // URLパラメータとしてdevice IDを付与して遷移
+        location.href = `${FORMS_URL}?device=${encodeURIComponent(deviceId)}`;
       });
     }
 
-    // ===== 位置取得 → 判定 → UI更新（message を使用） =====
+    // ===== 位置取得 → 判定 → UI更新 =====
     if (!navigator.geolocation) {
       messageEl.textContent = 'この端末では位置情報を取得できません。ブラウザ設定をご確認ください。';
     } else {
