--- a/index.html
+++ b/index.html
@@ -19,99 +19,120 @@
   </div>
 
   <script>
-    // ===== 設定値（会場の緯度・経度・半径・Forms URL） =====
-    const TARGET_LAT = 35.390896;     // 会場の緯度（例：駒場研修センター）
-    const TARGET_LON = 139.469494;    // 会場の経度
-    const RADIUS_M   = 100;         // 許容半径（メートル）
+    /* ===== 設定値 ===== */
+    var TARGET_LAT = 35.390896;   // 会場の緯度（例）
+    var TARGET_LON = 139.469494;  // 会場の経度（例）
+    var RADIUS_M   = 100;       // 許容半径（メートル）
 
-    // ✅ あなたの Microsoft Forms のURL
-    const FORMS_URL  = "https://forms.office.com/Pages/ResponsePage.aspx?id=DUXPH3G7_U6uXZDHvnV-ErBciUpgzMxIuotXr1XJnMhUQ0w2MUtXSFVITzlGQjI2RUpVUFVHMkhIMy4u";
+    /* あなたの Microsoft Forms のURL（ご提供のもの） */
+    var FORMS_URL  = "https://forms.office.com/Pages/ResponsePage.aspx?id=DUXPH3G7_U6uXZDHvnV-ErBciUpgzMxIuotXr1XJnMhUQ0w2MUtXSFVITzlGQjI2RUpVUFVHMkhIMy4u";
 
-    // ===== 共通：message 要素の参照 =====
-    const messageEl = document.getElementById('message');
+    /* ===== DOM 参照 ===== */
+    var messageEl = document.getElementById('message');
 
-    // ===== 端末IDの生成/保存（localStorage） =====
+    /* ===== 端末IDの生成/保存（localStorage） ===== */
     function getOrCreateDeviceId() {
-      let id = localStorage.getItem('deviceId');
-      if (!id) {
-        if (window.crypto?.randomUUID) {
-          id = crypto.randomUUID();
-        } else {
-          id = 'dev-' + Date.now() + '-' + Math.random().toString(16).slice(2);
+      try {
+        var id = localStorage.getItem('deviceId');
+        if (!id) {
+          if (window.crypto && typeof window.crypto.randomUUID === 'function') {
+            id = window.crypto.randomUUID();
+          } else {
+            id = 'dev-' + Date.now() + '-' + Math.random().toString(16).slice(2);
+          }
+          localStorage.setItem('deviceId', id);
         }
-        localStorage.setItem('deviceId', id);
+        return id;
+      } catch (e) {
+        // localStorage が使えない環境のフォールバック
+        return 'dev-' + Date.now() + '-' + Math.random().toString(16).slice(2);
       }
-      return id;
     }
 
-    // ===== 距離計算（ハバースイン） =====
+    /* ===== 距離計算（ハバースイン） ===== */
     function distanceMeters(lat1, lon1, lat2, lon2) {
-      const R = 6371000;
-      const toRad = d => d * Math.PI / 180;
-      const dLat = toRad(lat2 - lat1);
-      const dLon = toRad(lon2 - lon1);
-      const a = Math.sin(dLat/2)**2 +
-                Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) *
-                Math.sin(dLon/2)**2;
+      var R = 6371000;
+      function toRad(d) { return d * Math.PI / 180; }
+      var dLat = toRad(lat2 - lat1);
+      var dLon = toRad(lon2 - lon1);
+      var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
+              Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) *
+              Math.sin(dLon/2) * Math.sin(dLon/2);
       return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
     }
 
-    // ===== クリップボード（標準API＋フォールバック） =====
-    async function copyText(text) {
-      if (navigator.clipboard?.writeText) {
-        try { await navigator.clipboard.writeText(text); return true; } catch(e) {}
+    /* ===== クリップボード（標準API＋フォールバック） ===== */
+    function copyText(text, cb) {
+      if (navigator.clipboard && typeof navigator.clipboard.writeText === 'function') {
+        navigator.clipboard.writeText(text).then(function(){ cb(true); }).catch(function(){ fallbackCopy(text, cb); });
+      } else {
+        fallbackCopy(text, cb);
       }
+    }
+    function fallbackCopy(text, cb) {
       try {
-        const ta = document.createElement('textarea');
+        var ta = document.createElement('textarea');
         ta.value = text;
-        ta.style.position = 'fixed'; ta.style.top = '-1000px';
+        ta.style.position = 'fixed';
+        ta.style.top = '-1000px';
         document.body.appendChild(ta);
-        ta.focus(); ta.select();
-        const ok = document.execCommand('copy');
+        ta.focus();
+        ta.select();
+        var ok = document.execCommand('copy');
         document.body.removeChild(ta);
-        return ok;
-      } catch { return false; }
+        cb(!!ok);
+      } catch (e) {
+        cb(false);
+      }
     }
 
-    // ===== 判定OK時UI（ボタンクリック内でコピー→遷移） =====
+    /* ===== クエリ付与（? / & を自動切替） ===== */
+    function appendQuery(url, key, value) {
+      var sep = url.indexOf('?') >= 0 ? '&' : '?';
+      return url + sep + encodeURIComponent(key) + "=" + encodeURIComponent(value);
+    }
+
+    /* ===== 判定OK時のUI ===== */
     function renderGoUI(deviceId) {
-      const ui = document.getElementById('ui');
+      var ui = document.getElementById('ui');
       ui.style.display = 'block';
-      ui.innerHTML = `
-        <p>会場範囲内を確認しました。<br>
-           ボタンを押すと <strong>端末ID</strong> <code>${deviceId}</code> をコピーし、フォームへ進みます。</p>
-        <button id="copyAndGo">端末IDをコピーしてフォームへ</button>
-        <p style="font-size:12px;color:#666;margin-top:8px;">
-          ※ フォーム内の「端末IDを入力してください」欄に貼り付けて送信してください。
-        </p>
-      `;
-      document.getElementById('copyAndGo').addEventListener('click', async () => {
-        const ok = await copyText(deviceId);
-        if (!ok) {
-          alert('自動コピーに失敗しました。端末IDを手動でコピーして貼り付けてください：\n' + deviceId);
-        }
-        // URLパラメータとしてdevice IDを付与して遷移
-        location.href = `${FORMS_URL}?device=${encodeURIComponent(deviceId)}`;
+      ui.innerHTML =
+        '<p>会場範囲内を確認しました。<br>' +
+        'ボタンを押すと <strong>端末ID</strong> <code>' + deviceId + '</code> をコピーし、フォームへ進みます。</p>' +
+        '<button id="copyAndGo">端末IDをコピーしてフォームへ</button>' +
+        '<p style="font-size:12px;color:#666;margin-top:8px;">' +
+        '※ フォーム内の「端末IDを入力してください」欄に貼り付けて送信してください。</p>';
+
+      var btn = document.getElementById('copyAndGo');
+      btn.addEventListener('click', function () {
+        copyText(deviceId, function (ok) {
+          if (!ok) {
+            alert('自動コピーに失敗しました。端末IDを手動でコピーして貼り付けてください：\n' + deviceId);
+          }
+          var url = appendQuery(FORMS_URL, "device", deviceId);
+          window.location.href = url;
+        });
       });
     }
 
-    // ===== 位置取得 → 判定 → UI更新 =====
+    /* ===== 位置取得 → 判定 → UI更新 ===== */
     if (!navigator.geolocation) {
       messageEl.textContent = 'この端末では位置情報を取得できません。ブラウザ設定をご確認ください。';
     } else {
       navigator.geolocation.getCurrentPosition(
-        pos => {
-          const { latitude, longitude } = pos.coords;
-          const dist = distanceMeters(latitude, longitude, TARGET_LAT, TARGET_LON);
+        function (pos) {
+          var latitude = pos.coords.latitude;
+          var longitude = pos.coords.longitude;
+          var dist = distanceMeters(latitude, longitude, TARGET_LAT, TARGET_LON);
           if (dist <= RADIUS_M) {
             messageEl.textContent = '位置確認OK。';
-            const deviceId = getOrCreateDeviceId();
+            var deviceId = getOrCreateDeviceId();
             renderGoUI(deviceId);
           } else {
             messageEl.textContent = '会場範囲外のため、この場所からは回答できません。';
           }
         },
-        err => {
+        function (err) {
           console.error(err);
           messageEl.textContent = '位置情報の取得が許可されませんでした。ブラウザの位置情報設定をONにしてください。';
         },
